# rjags

./: CMakeLists.txt  DESCRIPTION
R/unix/: zzz.R.in
R/windows/: zzz.R
copyBinary/: CMakeLists.txt
src/: CMakeLists.txt  FindR.cmake  Makefile.in  init.c
